<resources>
    <string name="app_name">QuizCraft</string>
    <string name="quiz">QuizImage</string>
    <string name="choose_topic">Choose Topic:</string>
    <string name="javaimage">javaImage</string>
    <string name="java">Java</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="pythonimage">pythonImage</string>
    <string name="python">Python</string>
    <string name="androidimage">AndroidImage</string>
    <string name="android">Android</string>
    <string name="htmlimage">HtmlImage</string>
    <string name="html">HTML</string>
    <string name="backbtn">backBtn</string>
    <string name="selected_topic_name">Selected Topic Name</string>
    <string name="timer">timer</string>
    <string name="_00_59">00:59</string>
    <string name="_1_10">1/10</string>
    <string name="question_will_come_here">Question will come here.</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">option 2</string>
    <string name="option_3">option 3</string>
    <string name="option_4">option 4</string>
    <string name="next">Next</string>
    <string name="image">image</string>
    <string name="you_ve_successfully_completed_a_quiz">You\'ve Successfully completed a quiz</string>
    <string name="correct_answer_0">Correct Answer : 0</string>
    <string name="wrong_answer_0">Wrong Answer : 0</string>
    <string name="start_new_quiz">Start New Quiz</string>
</resources>