<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/quiz_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/quiz"
        android:src="@drawable/quiz" />

    <TextView
        android:id="@+id/chooseTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quiz_icon"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/choose_topic"
        android:textColor="#99FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layout1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chooseTopic"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/java"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_black_white"
            android:gravity="center"

            android:orientation="vertical"
            android:padding="20dp">

            <ImageView

                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/javaimage"
                android:src="@drawable/java" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/java"
                android:textColor="#CC000000"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/python"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_black_white"
            android:gravity="center"

            android:orientation="vertical"
            android:padding="20dp">

            <ImageView


                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/pythonimage"
                android:src="@drawable/python" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/python"
                android:textColor="#CC000000"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_black_white"
            android:gravity="center"

            android:orientation="vertical"
            android:padding="20dp">

            <ImageView

                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/androidimage"
                android:src="@drawable/android" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/android"
                android:textColor="#CC000000"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/html"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_black_white"
            android:gravity="center"

            android:orientation="vertical"
            android:padding="20dp">

            <ImageView

                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/htmlimage"
                android:src="@drawable/html" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/html"
                android:textColor="#CC000000"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startquiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz"
        android:textStyle="bold"
        android:background="@drawable/round_btn_back"
        android:layout_below="@id/layout2"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
</RelativeLayout>