<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000051"
    tools:context=".ResultActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
         >

        <ImageView
            android:id="@+id/backBtn2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/backbtn" />
    </RelativeLayout>
    <ImageView
        android:id="@+id/congratulationImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/congratulation"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/congTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/congratulationImage"
        android:text="@string/you_ve_successfully_completed_a_quiz"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
       android:textStyle="bold|italic"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_below="@id/congTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correctAnswer"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/correct_answer_0"
            android:textColor="#00C853" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wrongAnswer"
            android:textStyle="bold"
            android:text="@string/wrong_answer_0"
            android:textColor="#DD2C00" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startNewQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_new_quiz"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:background="@drawable/round_btn_back"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</RelativeLayout>